@@ -1,3 +1,7 @@
+2001-10-18  Bradford Hovinen  <hovinen@ximian.com>
+
+	* bonobo-config-archiver.c (get_listener_oafiid): Update listener name
+
 2001-10-13  Bradford Hovinen  <hovinen@ximian.com>
 
 	* bonobo-config-archiver.c (real_sync): Try to resolve a listener
